--- a/03-toleration.yml
+++ b/03-toleration.yml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: node-selector
+  name: toleration
   labels:
-    purpose: "selector-demo"
+    purpose: "toleration-demo"
 spec:
   nodeSelector:
     topology.kubernetes.io/zone: us-east-1f
